# FirstProject

./: CMakeLists.txt
game/: CMakeLists.txt
game/src/: Game.cpp  Game.h  Shader.cpp  Shader.h  main.cpp
game/src/entities/: Entity.cpp  Entity.h  Ship.cpp  Ship.h
game/src/rendering/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
